Closed Bug 342322 Opened 19 years ago Closed 19 years ago

"ASSERTION: Can only remove a singleton element" when de-floating something

Categories

(Core :: Layout: Floats, defect)

PowerPC
macOS
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: jruderman, Assigned: roc)

References

Details

(Keywords: assertion, regression, testcase)

Attachments

(2 files)

###!!! ASSERTION: Can only remove a singleton element: '!aElement->mNext', file /Users/admin/trunk/mozilla/layout/generic/nsLineBox.cpp, line 941 This assertion was added in bug 317278.
Attached file testcase
Attached patch remove assertionSplinter Review
I'm not really sure what I was thinking when I wrote that assertion. It's obvious from the code below it that mNext might not be null and we're deleting one element from the linked list, which might not be at the end.
Assignee: nobody → roc
Status: NEW → ASSIGNED
Attachment #227364 - Flags: superreview?(dbaron)
Attachment #227364 - Flags: review?(dbaron)
Attachment #227364 - Flags: superreview?(dbaron)
Attachment #227364 - Flags: superreview+
Attachment #227364 - Flags: review?(dbaron)
Attachment #227364 - Flags: review+
checked in
Status: ASSIGNED → RESOLVED
Closed: 19 years ago
Resolution: --- → FIXED
Crashtest checked in.
Flags: in-testsuite+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: