Bug 342322. It's OK for mNext to be non-null when we remove an element. r+sr=dbaron